--- a/practice1/practice1.csproj
+++ b/practice1/practice1.csproj
@@ -112,6 +112,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="absent.cs" />
+    <Compile Include="Account.cs" />
     <Compile Include="Authorization.xaml.cs">
       <DependentUpon>Authorization.xaml</DependentUpon>
     </Compile>
